--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Web 3 Learning</title>
   <script src="./index.ts"></script>
+  <script src="./experiment.ts"></script>
 </head>
 <body>
   <h1>Hello World</h1>
+  <button type="button" onClick="incrementCounter">Increment Counter</button>
 </body>
 </html>
