--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,11 @@
   <script src="./experiment.ts"></script>
 </head>
 <body>
-  <h1>Hello World</h1>
-  <button type="button" onClick="incrementCounter">Increment Counter</button>
+  <main>
+    <h1>Hello World</h1>
+    <div class="button-container"></div>
+    <div class="message-display"></div>
+    <div class="counter-display"></div>
+  </main>
 </body>
 </html>
