--- a/apps/vanilla-js-app/src/index.html
+++ b/apps/vanilla-js-app/src/index.html
@@ -1,18 +1,19 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Web 3 Learning</title>
-  <script src="./index.ts"></script>
-  <script src="./experiment.ts"></script>
-</head>
-<body>
-  <main>
-    <h1>Hello World</h1>
-    <div class="button-container"></div>
-    <div class="message-display"></div>
-    <div class="counter-display"></div>
-  </main>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Web 3 Learning</title>
+    <!-- we don't need to add them because the compiled scripts are injected by webpack into the body -->
+    <!-- <script src="./index.ts"></script> -->
+    <!-- <script src="./experiment.ts"></script> -->
+  </head>
+  <body>
+    <main>
+      <h1>Hello World</h1>
+      <div class="button-container"></div>
+      <div class="message-display"></div>
+      <div class="counter-display"></div>
+    </main>
+  </body>
 </html>
